# Robot-Global-Localization

./: .gitignore  Cargo.toml  README.md  tegra-config.ron
install/: 4904_localization.service  install.sh
src/: config.rs  lib.rs  lidar_test.rs  main.rs  map.rs  nano_2022.rs  networktables.rs  replay.rs  simulation.rs  tegra.rs  utility.rs
src/ai/: kalman_filter.rs  localization.rs  mod.rs  presets.rs
src/replay/: graph.rs  log.rs  mod.rs  render.rs
src/robot/: map.rs  mod.rs
src/robot/AI/: kalman_filter.rs  localization.rs  mod.rs  presets.rs
src/robot/sensors/: dummy.rs  gpio.rs  mod.rs  network.rs  nt.rs  rplidar.rs
src/robot/simulation/: ai.rs  environment.rs  mod.rs  robot.rs  sensor.rs
src/sensors/: dummy.rs  io.rs  log.rs  mod.rs  network.rs  rplidar.rs  udp.rs
src/simulation/: ai.rs  environment.rs  mod.rs  robot.rs  sensor.rs
testing/: Cargo.toml
testing/src/: main.rs
