[package]
name = "global-robot-localization"
version = "0.1.0"
authors = ["Codadillo <leoconr@nuevaschool.org>"]
edition = "2018"

[[bin]]
name = "simulation"
path = "src/simulation.rs"

[[bin]]
name = "tegra"
path = "src/tegra.rs"

[dependencies]
rand = "0.6.5"
nalgebra = "0.18.0"
rplidar_drv = { git = "https://github.com/RoboticsTeam4904/rplidar.rs" }
serialport = { version = "3.3.0", default-features = false, features = [] }
failure = "0.1.6"
rayon = "1.3.0"
nt = { git = "https://github.com/RoboticsTeam4904/nt-rs" }
tokio = { version = "0.2", features = ["full"] }
statrs = "0.12.0"
piston_window = "0.107.0"
