[package]
name = "global-robot-localization"
version = "0.1.0"
authors = ["Codadillo <leoconr@nuevaschool.org>"]
edition = "2018"

[[bin]]
name = "simulation"
path = "src/simulation.rs"
required-features = ["render"]

[[bin]]
name = "tegra"
path = "src/tegra.rs"
required-features = ["network", "rplidar", "render"]

[features]
network = ["nt", "tokio"]
rplidar = ["rplidar_drv", "serialport"]
render = ["piston_window"]

[dependencies]
rand = "0.6.5"
nalgebra = "0.18.0"
piston_window = { version = "0.105.0", optional = true }
rplidar_drv = { git = "https://github.com/RoboticsTeam4904/rplidar.rs", optional = true }
serialport = { version = "3.3.0", default-features = false, features = [], optional = true }
failure = "0.1.6"
rayon = "1.3.0"
nt = { git = "https://github.com/RoboticsTeam4904/nt-rs", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
statrs = "0.12.0"
