[package]
name = "global-robot-localization"
version = "0.1.0"
authors = ["Codadillo <leoconr@nuevaschool.org>"]
edition = "2018"

[[bin]]
name = "simulation"
path = "src/simulation.rs"
required-features = ["render", "graph"]

[[bin]]
name = "tegra"
path = "src/tegra.rs"
required-features = ["network", "rplidar", "render"]

[[bin]]
name = "nano_2022"
path = "src/nano_2022.rs"
required-features = ["rplidar"]

[[bin]]
name = "graphing_2022"
path = "src/graphing_2022.rs"
required-features = ["render"]

[features]
all = ["network", "rplidar", "render", "asyncio"]
default_features = [ "asyncio", "render" ]
network = ["nt", "tokio"]
rplidar = ["rplidar_drv", "serialport"]
render = ["piston_window"]
graph = ["plotters"]
asyncio = ["core-futures-io", "futures", "async-std"]

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.2"
nalgebra = "0.30.1"
plotters = { version = "0.3.0", optional = true }
piston_window = { version = "0.120.0", optional = true }
rplidar_drv = { git = "https://github.com/RoboticsTeam4904/rplidar.rs", optional = true }
serialport = { version = "3.3.0", default-features = false, features = [], optional = true }
failure = "0.1.6"
rayon = "1.3.0"
nt = { git = "https://github.com/RoboticsTeam4904/nt-rs", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
statrs = "0.12.0"
abomonation = "0.7.3"
typenum = "1.12.0"
generic-array = "0.14.4"
core-futures-io = { git = "https://github.com/noocene/core-futures-io", features = ["futures"], optional = true }
futures = { version = "0.3.4", features = ["thread-pool"], optional = true }
async-std = { version = "1.5.0", optional = true }
serde = "1.0.136"
serde_derive = "1.0.136"
rmp-serde = "1.0.0"
stdvis-core = { git = "https://github.com/RoboticsTeam4904/standard-vision" }


